// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class="select"
  >
    <button
      aria-controls="select-list"
      aria-haspopup="true"
      class="select__label"
      data-testid="SelectButton"
    >
      <p
        class="text text-base"
        data-testid="Text"
      >
        Please select an option ...
      </p>
      <svg
        class="select__caret select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      class="select__overlay "
      id="select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="text text-base"
          data-testid="Text"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-label="Heavenly Green"
        class="select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="text text-base"
          data-testid="Text"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-label="Sweet Pink"
        class="select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="text text-base"
          data-testid="Text"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the options menu open state 1`] = `
<DocumentFragment>
  <div
    class="select"
  >
    <button
      aria-controls="select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="select__label"
      data-testid="SelectButton"
    >
      <p
        class="text text-base"
        data-testid="Text"
      >
        Please select an option ...
      </p>
      <svg
        class="select__caret select__caret--open"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      class="select__overlay select__overlay--open"
      id="select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="text text-base"
          data-testid="Text"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-label="Heavenly Green"
        class="select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="text text-base"
          data-testid="Text"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-label="Sweet Pink"
        class="select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="text text-base"
          data-testid="Text"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class="select"
  >
    <button
      aria-controls="select-list"
      aria-haspopup="true"
      class="select__label"
      data-testid="SelectButton"
    >
      <p
        class="text text-base"
        data-testid="Text"
      >
        Strict Black
      </p>
      <svg
        class="select__caret select__caret--closed"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1rem"
      >
        <path
          d="M19 9l-7 7-7-7"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      class="select__overlay "
      id="select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-checked="true"
        aria-label="Strict Black"
        class="select__option
                                select__option--selected
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="text text-base"
          data-testid="Text"
        >
          Strict Black
        </p>
        <svg
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1rem"
        >
          <path
            d="M5 13l4 4L19 7"
          />
        </svg>
      </li>
      <li
        aria-label="Heavenly Green"
        class="select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="text text-base"
          data-testid="Text"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-label="Sweet Pink"
        class="select__option
                                
                                
                            "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="text text-base"
          data-testid="Text"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
